# python-tatsu-yaml

./: README.md  pyproject.toml
src/tatsuyaml/: cli.py
src/tatsuyaml/lib/: __init__.py  grammar.ebnf  main.py  parser.py
