[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tatsuyaml"
description = "YAML parser powered by TatSu"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.*"
dependencies = [
    "TatSu~=5.8.3"
]
dynamic = ["version"]

[project.scripts]
tatsuyaml = "tatsuyaml.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-icdiff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "tatsuyaml.version.version"}

[tool.setuptools_scm]
write_to = "src/tatsuyaml/version.py"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100
